<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cstLyUnitConverter"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".UnitConverterActivity">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLyUnit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/edge_ellipse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.085"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tabIndicatorColor="@color/white"
        app:tabMode="scrollable"></com.google.android.material.tabs.TabLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cstLyViewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLyUnit">


        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TableLayout
        android:id="@+id/tblLyUnitConverter"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cstLyViewPager">

        <TableRow
            android:id="@+id/rowUnitConverter0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btnUnitConverter7"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/keypad_7"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btnUnitConverter8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/keypad_8"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btnUnitConverter9"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/keypad_9"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btnUnitConverterDel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/keypad_del"
                android:textAllCaps="false" />
        </TableRow>

        <TableRow
            android:id="@+id/rowUnitConverter1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btnUnitConverter4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/keypad_4"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btnUnitConverter5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/keypad_5"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btnUnitConverter6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/keypad_6"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btnUnitConverterClear"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/keypad_clear"
                android:textAllCaps="false"
                android:tooltipText="@string/keypad_clear_hint" />
        </TableRow>

        <TableRow
            android:id="@+id/rowUnitConverter2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btnUnitConverter1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/keypad_1"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btnUnitConverter2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/keypad_2"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btnUnitConverter3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/keypad_3"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btnUnitConverterUp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/keypad_up"
                android:textAllCaps="false"
                android:tooltipText="@string/keypad_up_hint" />
        </TableRow>

        <TableRow
            android:id="@+id/rowUnitConverter3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btnUnitConverterSign"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/keypad_sign"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btnUnitConverter0"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/keypad_0"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btnUnitConverterDot"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/keypad_dot"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btnUnitConverterDown"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/keypad_down"
                android:textAllCaps="false"
                android:tooltipText="@string/keypad_down_hint" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>